--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "back-end": "file:",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "h2": "^0.3.0",
     "jsonwebtoken": "^9.0.2",
